--- a/public/experiments/offcanvas_experiment.html
+++ b/public/experiments/offcanvas_experiment.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
@@ -40,13 +40,13 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#/assignment/index.html">Assignments</a></li>
-                <li><a href="#/experiments/index.html">Experiments</a></li>
-                <li><a href="#/project/index.html">Project</a></li>
+                <li><a href="../assignment/home.html">Assignments</a></li>
+                <li><a href="../experiments/index.html">Experiments</a></li>
+                <li><a href="../project/index.html">Project</a></li>
             </ul>
-        </div><!-- /.nav-collapse -->
-    </div><!-- /.container -->
-</nav><!-- /.navbar -->
+        </div>
+    </div>
+</nav>
 
 <div class="container">
 
@@ -57,22 +57,25 @@
                 <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Social</button>
             </p>
             <div class="jumbotron">
-                <h1><img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAABmAAAAJGQzYjM1ODQyLTZhNjktNDQxYy1iYmNmLTE3Y2ZhZDU0ZmIyNw.jpg" alt="_blank" class="img-profile-pic img-circle"/></h1>
+                <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAABmAAAAJGQzYjM1ODQyLTZhNjktNDQxYy1iYmNmLTE3Y2ZhZDU0ZmIyNw.jpg" alt="_blank" class="img-profile-pic img-circle"/>
                 <p>A little bit about myself goes here.</p>
             </div>
             <div class="row">
-                <div class="col-xs-6 col-lg-4">
+                <div class="col-xs-6 col-lg-6">
+                    <h2>CS5610 Spring 2016</h2>
+                    <div class="list-group">
+                        <a href="../experiments" class="list-group-item">Experiments &raquo;</a>
+                        <a href="../assignment" class="list-group-item">Assignment &raquo;</a>
+                        <a href="../project" class="list-group-item">Project &raquo;</a>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-lg-6">
                     <h2>Heading</h2>
                     <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
                     <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-                </div><!--/.col-xs-6.col-lg-4-->
-                <div class="col-xs-6 col-lg-4">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-                </div><!--/.col-xs-6.col-lg-4-->
-            </div><!--/row-->
-        </div><!--/.col-xs-12.col-sm-9-->
+                </div>
+            </div>
+        </div>
 
         <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
             <div class="list-group">
@@ -80,16 +83,11 @@
                 <a href="https://www.linkedin.com/in/aditya-ghosh-2885b4b2" class="list-group-item" target="_blank">LinkedIn</a>
                 <a href="https://www.facebook.com/adityag23" class="list-group-item" target="_blank">Facebook</a>
             </div>
-        </div><!--/.sidebar-offcanvas-->
-    </div><!--/row-->
+        </div>
+    </div>
 
     <hr>
-
-    <footer>
-        <p>&copy; 2015 Company, Inc.</p>
-    </footer>
-
-</div><!--/.container-->
+</div>
 
 
 <!-- Bootstrap core JavaScript
