--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,110 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Main Landing Page</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <!--<link rel="icon" href="../../favicon.ico">-->
+
+    <title>Home</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="experiments/css/offcanvas.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
+
 <body>
-  <h1>Main Index Page</h1>
-  </br>
-  <a href="assignment/index.html">Assignments</a>
-  </br>
-  <a href="experiments/index.html">Experiments</a>
-  </br>
-  <a href="project/index.html">Project</a>
+<nav class="navbar navbar-fixed-top navbar-inverse">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Aditya Ghosh</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="../assignment/home.html">Assignments</a></li>
+                <li><a href="../experiments/index.html">Experiments</a></li>
+                <li><a href="../project/index.html">Project</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<div class="container">
+
+    <div class="row row-offcanvas row-offcanvas-right">
+
+        <div class="col-xs-12 col-sm-9">
+            <p class="pull-right visible-xs">
+                <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Social</button>
+            </p>
+            <div class="jumbotron">
+                <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAABmAAAAJGQzYjM1ODQyLTZhNjktNDQxYy1iYmNmLTE3Y2ZhZDU0ZmIyNw.jpg"
+                     alt="_blank" class="img-profile-pic img-circle"/>
+                <blockquote>
+                    <h5>There are three responses to a piece of design – yes, no, and WOW! Wow is the one to aim
+                        for.</h5>
+                    <h6>-Milton Glaser</h6>
+                </blockquote>
+                <p>
+                    Some description.
+                </p>
+            </div>
+            <div class="row">
+                <div class="col-xs-6 col-lg-6">
+                    <h2>CS5610 Spring 2016</h2>
+                    <div class="list-group">
+                        <a href="../experiments" class="list-group-item">Experiments &raquo;</a>
+                        <a href="../assignment" class="list-group-item">Assignment &raquo;</a>
+                        <a href="../project" class="list-group-item">Project &raquo;</a>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-lg-6">
+                    <h2>Heading</h2>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
+                        mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
+                        magna mollis euismod. Donec sed odio dui. </p>
+                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
+            <div class="list-group">
+                <a href="https://github.com/adityaghosh" class="list-group-item" target="_blank">Github</a>
+                <a href="https://www.linkedin.com/in/aditya-ghosh-2885b4b2" class="list-group-item" target="_blank">LinkedIn</a>
+                <a href="https://www.facebook.com/adityag23" class="list-group-item" target="_blank">Facebook</a>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+</div>
+
+
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="experiments/js/offcanvas.js"></script>
 </body>
 </html>
