--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Aditya Ghosh</a>
+            <a class="navbar-brand" href="#">Landing Page</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
@@ -58,16 +58,30 @@
                 <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Social</button>
             </p>
             <div class="jumbotron">
+                <div class="row">
+                    <div class="col-md-2 col-sm-3 col-xs-3">
+                        <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAWAAAAAJGJjMzAzMGYwLWEzNTktNGUyNy1iYmUzLWVkMmEwMDQwMjMwNw.jpg"
+                             alt="_blank" class="img-profile-pic img-circle"/>
+                    </div>
+                    <div class="col-md-10 col-sm-9 col-xs-9 text-left">
+                        <h2>Aditya Ghosh</h2>
+                    </div>
 
-                <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAWAAAAAJGJjMzAzMGYwLWEzNTktNGUyNy1iYmUzLWVkMmEwMDQwMjMwNw.jpg"
-                     alt="_blank" class="img-profile-pic img-circle"/>
+                </div>
+
                 <blockquote>
                     <h5>There are three responses to a piece of design – yes, no, and WOW! Wow is the one to aim
                         for.</h5>
                     <h6>-Milton Glaser</h6>
                 </blockquote>
                 <p>
-                    Some description.
+                    <h4>Hi there, my name is Aditya Ghosh. I’m currently pursuing a Master’s of Science degree in Computer Science at Northeastern University.</h4>
+                </p>
+                <p>
+                    <h4>I have 2 years of work experience at Tata Consultancy Services, as a Software Engineer.
+                    My major role in the company was to develop and maintain a web application for a client using my skills in ASP.NET, MSSQL and JavaScript.
+                    I took on a secondary role of Analysis and resolution of data misrepresentation, where I got an in depth knowledge about my project’s database structure. Further I learnt about performance tuning by optimizing joins. I used this technique to optimize over 20 Stored Procedures during my tenure in the company.
+                    </h4>
                 </p>
             </div>
             <div class="row">
@@ -81,11 +95,9 @@
                     </div>
                 </div>
                 <div class="col-xs-6 col-lg-6">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
-                        mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
-                        magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                    <h2>Personal Project</h2>
+                    <p> As part of the Creative design and website development team of TEDxMasterCanteenSquare, we created an interactive desktop website using jQuery. </p>
+                    <p><a class="btn btn-default" href="http://tedxmcs-adityaghosh.rhcloud.com/" role="button" target="_blank">Go to TEDxMCS &raquo;</a></p>
                 </div>
             </div>
         </div>
