--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -26,9 +26,12 @@
     <script src="views/sidebar/sidebar.controller.js"></script>
     <script src="views/users/register.controller.js"></script>
     <script src="views/users/profile.controller.js"></script>
+    <script src="views/users/login.controller.js"></script>
+    <script src="views/forms/forms.controller.js"></script>
 
     <!-- Angular Services-->
     <script src="services/user.service.client.js"></script>
+    <script src="services/forms.service.client.js"></script>
 
 
     <!-- Custom styles for this template -->
